2012-07-31  Peter Beverloo  <peter@chromium.org>

        [Chromium] Don't use ninja for building Chromium for Android
        https://bugs.webkit.org/show_bug.cgi?id=92764

        Reviewed by Adam Barth.

        When Ninja projects files are generated (which will be done for Android),
        make sure that the Android builder doesn't unintentionally switch to
        using Ninja. We should make that switch at a predetermined time.

        * Scripts/webkitdirs.pm:
        (buildChromium):

2012-07-31  Thiago Marcos P. Santos  <thiago.santos@intel.com>

        Add a mechanism to dump the stack trace in case of a crash
        https://bugs.webkit.org/show_bug.cgi?id=92666

        Reviewed by Csaba Osztrogonác.

        Move crash signal handlers to WTFInstallReportBacktraceOnCrashHook()
        and eliminate some duplicated code.

        * DumpRenderTree/qt/main.cpp:
        (main):
        * WebKitTestRunner/InjectedBundle/qt/InjectedBundleQt.cpp:
        (WTR::InjectedBundle::platformInitialize):

2012-07-31  Jochen Eisinger  <jochen@chromium.org>

        [chromium] move EventSender into TestRunner.a
        https://bugs.webkit.org/show_bug.cgi?id=92277

        Reviewed by Adam Barth.

        * DumpRenderTree/DumpRenderTree.gypi:
        * DumpRenderTree/DumpRenderTree.gyp/DumpRenderTree.gyp:
        * DumpRenderTree/chromium/TestRunner/EventSender.cpp: Renamed from Tools/DumpRenderTree/chromium/EventSender.cpp.
        * DumpRenderTree/chromium/TestRunner/EventSender.h: Renamed from Tools/DumpRenderTree/chromium/EventSender.h.
        * DumpRenderTree/chromium/TestRunner/TestInterfaces.cpp:
        (TestInterfaces::Internal::eventSender):
        (TestInterfaces::Internal):
        (TestInterfaces::Internal::Internal):
        (TestInterfaces::Internal::~Internal):
        (TestInterfaces::Internal::setWebView):
        (TestInterfaces::Internal::setDelegate):
        (TestInterfaces::Internal::bindTo):
        (TestInterfaces::Internal::resetAll):